# shingo_program

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md
artifacts/: circuits_hash.txt
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/shingo/: Cargo.toml
programs/shingo/src/: lib.rs
